tests/tooling/fixtures/native/recovery/negative/negative_misplaced_qualifier_case_label_pure.objc3
// Negative fixture: declaration qualifiers are invalid in case-label expression positions.
// Expected diagnostic code(s): O3P100.
module NegativeMisplacedQualifierCaseLabelPure;

fn main() -> i32 {
  let value = 1;
  switch (value) {
    case pure:
      return 1;
    default:
      return 0;
  }
}